# Colorful-MingCai

./: .gitignore  LICENSE  PRIVACY.md  README.md  env.d.ts  package-lock.json  package.json  restart-dev.cmd  tsconfig.json  wxt.config.ts
backend/: .dockerignore  .env.example  .env.production.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260326_0001_initial_schema.py  20260329_0002_add_user_sessions.py  20260329_0003_add_email_verification_tokens.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  annotation_document.py  annotation_sync_job.py  email_verification_token.py  translation_preference.py  translation_provider_config.py  translation_request.py  user.py  user_auth_identity.py  user_session.py
backend/app/repositories/: translation_request_repository.py
backend/app/schemas/: account.py  annotation_sync.py  auth.py  common.py  health.py  translation.py
backend/app/services/: access_control_service.py  annotation_document_service.py  authentication_service.py  email_service.py  email_verification_service.py  password_hash_service.py  provider_config_service.py  token_service.py  (+4 more)
backend/deploy/: compose.server.yml
backend/tests/: test_account.py  test_account_deletion_service.py  test_annotations_sync.py  test_auth.py  test_authentication_service.py  test_health.py  test_site.py  test_youdao_client.py
(+92 files in other folders)
